--- a/index.html
+++ b/index.html
@@ -6,3 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
     <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="switch"></div>
+    </div>
+    <div class="clock">
+        <img src="./clock.png" alt="">
+        <div class="dot"></div>
+        <div class="hour"></div>
+        <div class="min"></div>
+        <div class="tick"></div>
+    </div>
