--- a/index.html
+++ b/index.html
@@ -18,3 +18,11 @@
         <div class="min"></div>
         <div class="tick"></div>
     </div>
+  <div class="day-container">
+        <div class="day"><span><h1 data-text="ALIPHATIC">ALIPHATIC</h1></span></div>
+    </div>
+
+    <script src="script.js"></script>
+    
+</body>
+</html>
