--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="switch"></div>
     </div>
     <div class="clock">
-        <img src="./clock.png" alt="">
+        <img src="clock.png" alt="">
         <div class="dot"></div>
         <div class="hour"></div>
         <div class="min"></div>
